[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-revealjs"
description = "Sphinx extension with theme to generate Reveal.js presentation"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">= 3.7"
dynamic = ["version"]
dependencies = [
    "docutils",
    "Sphinx>=4.0",
    "packaging",
]

[project.optional-dependencies]
screenshot = [
    "playwright",
]
test = [
    "BeautifulSoup4",
    "Pillow",
    "pytest",
    "python-magic",
    "Sphinx[test]>=4.0",
]
doc = [
    "Sphinx ==5.*",  # For readthedocs (pass --upgrade-strategy only-if-needed)
    "sphinx-autobuild ==2021.3.14",
    "sphinx-rtd-theme >=0.5.1,<0.6",
    "atsphinx-footnotes",
    "atsphinx-htmx-boost",
]
demo = [
    "atsphinx-mini18n >=0.3.1",
    "oEmbedPy",
    "sphinx-intl >=2.0.1,<3",
    "sphinxcontrib-gtagjs >=0.2.0,<0.3",
    "sphinxcontrib-budoux",
    "sphinxcontrib-sass",
    "sphinxext-opengraph",
]

[project.urls]
Home = "https://attakei.github.io/sphinx-revealjs"
Documentation = "https://sphinx-revealjs.readthedocs.io/"
Repository = "https://github.com/attakei/sphinx-revealjs"

[tool.flit.module]
name = "sphinx_revealjs"

[tool.flit.sdist]
include = [
    "demo",
    "doc",
    "sphinx_revealjs/_static/revealjs/",
    "tests",
    "tools",
]
exclude = [
    "demo/_build",
    "doc/_build",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
extend-exclude = ["tests/*/__init__.py", "*/conf.py"]

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D200", "D203", "D213", "D400"]

[tool.ruff.lint.per-file-ignores]
"doc/*.py" = ["I"]

[tool.ruff.lint.isort]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
