[metadata]
name = sphinx-revealjs
description = Sphinx extension with theme to generate Reveal.js presentation
url = https://github.com/attakei/sphinx-revealjs
author = attakei
author_email = attakei@gmail.com
license_file = LICENSE
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Framework :: Sphinx :: Theme
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Documentation :: Sphinx
    Topic :: Multimedia :: Graphics :: Presentation

[options]
packages = find:
include_package_data = True
install_requires =
    docutils
    Sphinx

[options.extras_require]
packaging =
    wheel
    bumpversion
linting =
    flake8
    flake8-docstrings
    flake8-isort
    pydocstyle<4.0.0
    doc8
testing =
    nose
    sphinx-testing

[options.packages.find]
exclude =
    docs
    demo
    tools

[bumpversion]
current_version = 0.5.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:sphinx_revealjs/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[pydocstyle]
ignore = D100,D101,D102,D103,D104,D107,D200,D213,D400

[flake8]
ignore = D203
exclude =
    .git,__pycache__,.venv,
    */conf.py
max-complexity = 10

[doc8]
ignore-path = *.egg-info,.tox

[isort]
skip=docs/*.py
multi_line_output=5

[nosetests]
match=(?:\b|_)[Tt]est(ing|_(.+))$
