[bumpversion]
current_version = 0.9.0
commit = False
tag = False

[options]
packages = find:
include_package_data = True

[options.extras_require]
packaging = 
	wheel
	twine
	bumpversion
linting = 
	flake8
	flake8-docstrings
	flake8-isort
	pydocstyle<4.0.0
	doc8
testing = 
	nose
	sphinx-testing
	beautifulsoup4

[options.packages.find]
exclude = 
	docs
	demo
	tools

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:sphinx_revealjs/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D107,D200,D213,D400

[flake8]
ignore = D203
exclude = 
	.git,__pycache__,.venv,
	*/conf.py
max-complexity = 10

[doc8]
ignore-path = *.egg-info,.tox

[isort]
skip = docs/*.py
multi_line_output = 5

[nosetests]
match = (?:\b|_)[Tt]est(ing|_(.+))$

